--- a/Views/Shopping/Promocode.cshtml
+++ b/Views/Shopping/Promocode.cshtml
@@ -47,6 +47,7 @@
             }
         }
         <a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-2 " href="/Payment/CreatePayment">Paypal</a>
+        <a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-2 " href="/Payment/PaymentMomo">Momo</a>
 
     </div>
 </main>
