--- a/Views/Home/Details_Pro.cshtml
+++ b/Views/Home/Details_Pro.cshtml
@@ -231,7 +231,8 @@
                         </div>
                         <p class="font-medium text-gray-500">@Session["count"] Reviewers</p>
 
-                        @if (Session["count"].Equals(0))
+
+                        @if ((int)Session["count"] == 0)
                         {
                             <div class="flex items-center mt-4">
                                 <span class="font-medium text-blue-600 ">5 star</span>
@@ -271,43 +272,72 @@
                         }
                         else
                         {
+
+
                             <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 ">5 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width:@Session["5"]"></div>
+                                <span class="font-medium text-blue-600 flex">
+                                    <span>5</span>
+                                    <i class="fa-solid fa-star text-yellow-300 ml-2"></i>
+                                </span>
+                                <div class="w-full">
+                                    <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                        <div class="h-5 bg-yellow-300 rounded" style="width:@Session["5"]"></div>
+                                    </div>
                                 </div>
                                 <span class="font-medium text-blue-600 ">@Session["rate5"] </span>
                             </div>
                             <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 ">4 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["4"]"></div>
+                                <span class="font-medium text-blue-600 flex">
+                                    <span>4</span>
+                                    <i class="fa-solid fa-star text-yellow-300 ml-2"></i>
+                                </span>
+                                <div class="w-full">
+                                    <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                        <div class="h-5 bg-yellow-300 rounded" style="width:@Session["4"]"></div>
+                                    </div>
                                 </div>
-                                <span class="font-medium text-blue-600 ">@Session["rate4"] </span>
+                                <span class="font-medium text-blue-600">@Session["rate4"] </span>
                             </div>
                             <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 ">3 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["3"]"></div>
+                                <span class="font-medium text-blue-600 flex">
+                                    <span>3</span>
+                                    <i class="fa-solid fa-star text-yellow-300 ml-2"></i>
+                                </span>
+                                <div class="w-full">
+                                    <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                        <div class="h-5 bg-yellow-300 rounded" style="width:@Session["3"]"></div>
+                                    </div>
                                 </div>
                                 <span class="font-medium text-blue-600 ">@Session["rate3"] </span>
                             </div>
                             <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 ">2 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["2"]"></div>
+                                <span class="font-medium text-blue-600 flex">
+                                    <span>2</span>
+                                    <i class="fa-solid fa-star text-yellow-300 ml-2"></i>
+                                </span>
+                                <div class="w-full">
+                                    <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                        <div class="h-5 bg-yellow-300 rounded" style="width:@Session["2"]"></div>
+                                    </div>
                                 </div>
                                 <span class="font-medium text-blue-600 ">@Session["rate2"] </span>
                             </div>
                             <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 ">1 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["1"]"></div>
+                                <span class="font-medium text-blue-600 flex">
+                                    <span>1</span>
+                                    <i class="fa-solid fa-star text-yellow-300 ml-2"></i>
+                                </span>
+                                <div class="w-full">
+                                    <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                        <div class="h-5 bg-yellow-300 rounded" style="width:@Session["1"]"></div>
+                                    </div>
                                 </div>
                                 <span class="font-medium text-blue-600 ">@Session["rate1"] </span>
                             </div>
-                        }
 
+
+
+                        }
                     </div>
 
                     <p class="text-3xl font-bold my-4">Write a review</p>
